--- a/experiments/dataset2025/data_analysis/movements_analysis.ipynb
+++ b/experiments/dataset2025/data_analysis/movements_analysis.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-15T14:53:05.384624Z",
-     "start_time": "2025-10-15T14:53:04.938140Z"
+     "end_time": "2025-12-11T22:42:14.866742338Z",
+     "start_time": "2025-12-11T22:42:14.859174760Z"
     }
    },
    "source": [
@@ -18,26 +18,26 @@
     "import json"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T14:53:35.916939Z",
-     "start_time": "2025-10-15T14:53:35.913754Z"
+     "end_time": "2025-12-11T22:42:16.952263530Z",
+     "start_time": "2025-12-11T22:42:16.945068494Z"
     }
    },
    "cell_type": "code",
    "source": "engine = create_engine(\"postgresql://admin:admin123@localhost:5432/DozzaDB\")",
    "id": "bfd3cc9091f7fdbc",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-15T14:53:43.079446Z",
-     "start_time": "2025-10-15T14:53:42.537010Z"
+     "end_time": "2025-12-11T22:42:18.593617633Z",
+     "start_time": "2025-12-11T22:42:18.555107828Z"
     }
    },
    "cell_type": "code",
@@ -52,37 +52,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       classe   i       id_zonai       id_zonaj  spost_zonai_zonaj  \\\n",
-      "0         Esc  10  008037025C000  008037045C000                  4   \n",
-      "1         Esc  12  008037025C000  008037006C005                  4   \n",
-      "2         Esc  14  008037025C000  008039010C000                  4   \n",
-      "3         Esc  14  008037025C000  008040022C000                  4   \n",
-      "4         Esc  15  008037025C000  008039006C000                  4   \n",
-      "...       ...  ..            ...            ...                ...   \n",
-      "115005    Tur   8  008037025C000  008037032C001                  4   \n",
-      "115006    Tur   8  008037025C000  008039014C000                  4   \n",
-      "115007    Tur   9  008037025C000  008037020C000                  4   \n",
-      "115008    Tur   9  008037025C000  008037032C000                  4   \n",
-      "115009    Tur   9  008037025C000  008037032C001                  7   \n",
-      "\n",
-      "       data_analisi  \n",
-      "0        2025-08-06  \n",
-      "1        2025-08-06  \n",
-      "2        2025-08-06  \n",
-      "3        2025-08-06  \n",
-      "4        2025-08-06  \n",
-      "...             ...  \n",
-      "115005   2025-09-05  \n",
-      "115006   2025-09-05  \n",
-      "115007   2025-09-05  \n",
-      "115008   2025-09-05  \n",
-      "115009   2025-09-05  \n",
-      "\n",
-      "[115010 rows x 6 columns]\n"
+      "Empty DataFrame\n",
+      "Columns: [classe, i, id_zonai, id_zonaj, spost_zonai_zonaj, data_analisi]\n",
+      "Index: []\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -93,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T11:08:59.804568Z",
-     "start_time": "2025-10-09T11:08:59.756297Z"
+     "end_time": "2025-12-11T22:39:49.371922992Z",
+     "start_time": "2025-12-11T22:39:49.339589002Z"
     }
    },
    "cell_type": "code",
@@ -107,15 +83,14 @@
     {
      "data": {
       "text/plain": [
-       "                  i  spost_zonai_zonaj\n",
-       "count  87185.000000       87185.000000\n",
-       "mean      12.160693           7.151528\n",
-       "std        5.634554           6.933784\n",
-       "min        0.000000           4.000000\n",
-       "25%        7.000000           4.000000\n",
-       "50%       12.000000           4.000000\n",
-       "75%       17.000000           7.000000\n",
-       "max       23.000000          98.000000"
+       "      data_analisi\n",
+       "count            0\n",
+       "mean           NaT\n",
+       "min            NaT\n",
+       "25%            NaT\n",
+       "50%            NaT\n",
+       "75%            NaT\n",
+       "max            NaT"
       ],
       "text/html": [
        "<div>\n",
@@ -136,62 +111,49 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>i</th>\n",
-       "      <th>spost_zonai_zonaj</th>\n",
+       "      <th>data_analisi</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>87185.000000</td>\n",
-       "      <td>87185.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>12.160693</td>\n",
-       "      <td>7.151528</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>5.634554</td>\n",
-       "      <td>6.933784</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>7.000000</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>98.000000</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "metadata": {},
